# pytja

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.txt  bundle_release.sh  docker-compose.yml  mounts.json  server.crt
.github/workflows/: release.yml
config/: default.toml  release.toml
data/: mounts.json  plugin_permissions.json
plugins/: pytja_core_plugin.json  pytja_core_plugin.wasm  pytja_storage_commander.json  pytja_storage_commander.wasm  test_plugin.json  test_plugin.wasm
pytja-macos/: QUICKSTART.md
pytja_admin/: Cargo.toml
pytja_admin/src/: client.rs  lib.rs  network.rs  utils.rs
pytja_admin/src/menus/: databases.rs  mod.rs  rbac.rs  system.rs  users.rs
pytja_core/: Cargo.toml
pytja_core/src/: config.rs  crypto.rs  error.rs  identity.rs  lib.rs  models.rs  repo.rs  telemetry.rs
pytja_core/src/drivers/: mod.rs  postgres.rs  sqlite.rs
pytja_core/src/storage/: fs.rs  mod.rs  s3.rs
pytja_core_plugin/: Cargo.toml
pytja_core_plugin/src/: main.rs
pytja_proto/: Cargo.toml  build.rs
pytja_proto/proto/: pytja.proto
pytja_proto/src/: lib.rs
pytja_registrar/: Cargo.toml
pytja_registrar/src/: lib.rs
pytja_sdk/: Cargo.toml
pytja_sdk/src/: abi.rs  lib.rs
pytja_server/: Cargo.toml
pytja_server/src/: lib.rs  session_manager.rs
pytja_server/src/handlers/: admin.rs  auth.rs  filesystem.rs  mod.rs  service.rs
pytja_shell/: Cargo.toml
pytja_shell/src/: lib.rs  network_client.rs  terminal.rs  vfs.rs
pytja_shell/src/radar/: display.rs  engine.rs  mod.rs  models.rs  network.rs  vfs.rs
pytja_storage_commander/: Cargo.toml
pytja_storage_commander/src/: main.rs  ui.html
pytja_test_plugin/: Cargo.toml
pytja_test_plugin/src/: main.rs
pytja_window/: Cargo.toml
pytja_window/src/: main.rs
src/: bootstrap.rs  main.rs
usb_drive/: pytja.pytja
