[package]
name = "pytja_core"
version = "0.1.0"
edition = "2021"

[dependencies]
# --- ASYNC RUNTIME ---
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# --- DATABASE (SQLx Stack) ---
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-native-tls", "sqlite", "postgres", "macros", "chrono", "uuid"] }

# --- STORAGE & AWS ---
object_store = "0.11"
aws-config = "1.1"
aws-sdk-s3 = "1.14"
bytes = "1.5"
tokio-util = { version = "0.7", features = ["io"] }

# --- CRYPTO & SECURITY ---
rand = "0.8"
aes-gcm = "0.10"
ed25519-dalek = { version = "2.0", features = ["rand_core", "pem"] }
pbkdf2 = "0.12"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.21"
hex = "0.4"
uuid = { version = "1.0", features = ["v4", "fast-rng"] }

# --- UTILS & LOGGING ---
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.13"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"

directories = "5.0"
futures-util = "0.3"
dialoguer = "0.11"
colored = "2.0"