[package]
name = "pytja_shell"
version = "0.1.0"
edition = "2021"

[lib]
name = "pytja_shell"
path = "src/lib.rs"

[dependencies]
pytja_core = { path = "../pytja_core" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

aes-gcm = "0.10"
pbkdf2 = "0.12"
sha2 = "0.10"
hmac = "0.12"
rand = "0.8"
bcrypt = "0.15"
base64 = "0.21"
rustyline = "13.0"
crossterm = "0.27"
colored = "2.0"
rpassword = "7.0"
chrono = "0.4"
thiserror = "1.0"
anyhow = "1.0"
zip = "0.6"
tempfile = "3.8"
glob = "0.3"
tokio = { version = "1.0", features = ["full"] }
indicatif = "0.17"
tracing = "0.1"
hex = "0.4"
tonic = { version = "0.10", features = ["tls", "tls-roots"] }
prost = "0.12" 
pytja_proto = { path = "../pytja_proto" }
http = "0.2"
async-stream = "0.3.6"
uuid = "1.20.0"
futures-util = "0.3.31"
tokio-stream = "0.1.18"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
dirs = "6.0.0"
ed25519-dalek = "2.2.0"
directories = "5.0"

dialoguer = "0.10"
walkdir = "2.4"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
wasmer = "4.4.0"
wasmer-wasix = "0.28.0"

reqwest = { version = "0.11", features = ["json"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
